added horizontal divider in cards on landing page.

--- a/style.css
+++ b/style.css
@@ -47,8 +47,16 @@
     padding: 0;
     vertical-align: left;
 }
-
+/* change image size */
 .float-left {
     max-width: 279px; 
     max-height: auto;
 }
+
+/* Set line for card box */
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+  }
