--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@
     color:#1d959e;
 }
 
+/* change header font size */
+.h5, h5 {
+    font-size: 1.75rem;
+}
+
 /* change summary image layout */
 .btn {
     border: 0;
@@ -60,3 +65,21 @@ hr {
     border: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
   }
+
+/* set thumbnail sizes */
+.thumbnail1 {
+    max-width: 180px;
+    max-height: auto;
+}
+.thumbnail2 {
+    max-width: 180px;
+    max-height: auto;
+}
+.thumbnail3 {
+    max-width: 180px;
+    max-height: auto;
+}
+.thumbnail4 {
+    max-width: 180px;
+    max-height: auto;
+}
