--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 /* ----------------------------------------------------- */
 /* Found on: https://stackoverflow.com/questions/18529274/change-navbar-color-in-twitter-bootstrap */
-.navbar-custom {
+
+@media (max-width: 600px) {
+    .navbar-custom {
     background-color: #1d959e;
+    }
 }
 
+.navbar-brand{
+    background-color:#1d959e;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text {
@@ -70,7 +78,7 @@ hr {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
   }
 
-/* set thumbnail sizes */
+/* set thumbnail attributes */
 .thumbnail1 {
     max-width: 180px;
     max-height: auto;
@@ -102,4 +110,16 @@ hr {
 .thumbnail8 {
     max-width: 700px;
     max-height: auto;
+}
+.thumbnail9 {
+    max-width: 180px;
+    max-height: auto;
+    border-color:#1d959e;
+    border-style:solid;
+}
+.thumbnail10 {
+    max-width: 180px;
+    max-height: auto;
+    border-color:#1d959e;
+    border-style:solid;
 }
