--- a/style.css
+++ b/style.css
@@ -142,6 +142,24 @@ h4 {
 p {
     font-size: small;
 }
+/* found on: https://stackoverflow.com/questions/50807744/apply-css-class-to-pandas-dataframe-using-to-html/50939211 */
+/* includes alternating gray and white with on-hover color */
+.mystyle {
+    font-size: 11pt; 
+    font-family: Arial;
+    border-collapse: collapse; 
+    border: 1px solid silver;
+}
+.mystyle td, th {
+    padding: 5px;
+}
+.mystyle tr:nth-child(even) {
+    background: #E0E0E0;
+}
+.mystyle tr:hover {
+    background: silver;
+    cursor: pointer;
+}
 @media (max-width: 600px) {
     .navbar-custom {
     background-color: #1d959e;
